# bevy_mod_event_group

./: Cargo.toml  LICENCE  README
bevy_mod_event_group/: Cargo.toml
bevy_mod_event_group/examples/: simple.rs
bevy_mod_event_group/src/: lib.rs
bevy_mod_event_group_derive/: Cargo.toml
bevy_mod_event_group_derive/src/: lib.rs
