[workspace]
members = [
    "bevy_mod_event_group",
    "bevy_mod_event_group_derive",
]
resolver = "3"

[workspace.dependencies]
syn = { version = "2.0.101", default-features = false }
quote = { version = "1.0.40", default-features = false }
proc-macro2 = { version = "1.0.95", default-features = false }
bevy_app = { version = "0.16", default-features = false }
bevy_ecs = { version = "0.16", default-features = false }